--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Setup Nodejs
-      - name: Setup Node.js 16
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
