--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "aziz",
+	"name": "githubactions",
 	"version": "0.0.10",
 	"description": "A basic Typescript web app project template that uses Snowpack.",
 	"scripts": {
