--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 	"resolutions": {},
 	"volta": {
 		"node": "16.9.0",
-		"yarn": "1.22.11"
+		"yarn": "1.22.11",
+		"testResult": "10%"
+
 	},
 	"jest": {
 		"testEnvironment": "node",
